Muliti-Cluster-demo/cluster2/04-virutalservice-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp
spec:
  hosts:
  - demoapp
  http:
  - name: default
    route:
    - destination:
        host: demoapp
